# DesignPattens

./: CMakeLists.txt
Beginning/: readme.MD
Beginning/inc/: config.h  draw.h  shape1.h  shape2.h
Beginning/src/: mainForm1.cpp  mainForm2.cpp
